# veggieapp

./: .gitignore  CMakeLists.txt  README.md  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  create.sql  mainwindow.cpp  mainwindow.h  veggieapp.pro
src/: AddDialog.cpp  AddDialog.h  AddDialog.ui  CMakeLists.txt  ConnectionDialog.cpp  ConnectionDialog.h  ConnectionDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModifyDialog.cpp  ModifyDialog.h  ModifyDialog.ui  PrintDialog.cpp  PrintDialog.h  util.cpp  util.h
src/ui/: AddDialog.ui  MainWindow.ui  ModifyDialog.ui  PrintDialog.ui
